Funcionalidad Editar y Eliminar descuentos completadas.